# Cora_AI

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  constants.rs  hotkey.rs  lib.rs  llm.rs  main.rs  state.rs  stt.rs  tts.rs  vision.rs
src/components/: EyeSphere.css  EyeSphere.tsx  Settings.css  Settings.tsx
src/components/EyeSphere/: index.tsx  irisGroups.ts
src/types/: index.ts
